# resume

./: db.sqlite3  pyproject.toml
catalog/: urls.py  views.py
cv/: models.py  urls.py  views.py
cv/migrations/: 0001_initial.py
resume/: settings.py  urls.py
