[tool.poetry]
name = "resume"
version = "0.1.0"
description = "this is a project about creating a resume templating system"
authors = ["Chiko liu"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
black = "^21.12b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
